fix spacing

--- a/app/assets/stylesheets/test_taking.scss
+++ b/app/assets/stylesheets/test_taking.scss
@@ -54,6 +54,7 @@ header.secondary {
     flex: 1 1 20em;
 
     .input-item {
+      margin-bottom: 0.5em;
       input, select {
         font-size: 2em;
         width: 100%;
